Add a test case for a client timeout.